# as7343-micropython

./: LICENSE.txt  Makefile  README.md  package.json  pyproject.toml
examples/: pico_explorer.py
src/: as7343.py
