[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "as7343-micropython"
version = "1.0.0"
authors = [
  { name="Phil", email="phil@pimoroni.com" },
]
description = " MicroPython device library for the AS7343 14-channel spectral sensor"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[tool.hatch.build]
include = [
    "src/as7343.py",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[project.urls]
GitHub = "https://www.github.com/pimoroni/as7343-micropython"
Homepage = "https://www.pimoroni.com"